--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,10 +130,12 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.item_image.variant(resize:'500x500'), class: "item-img" %>
-
+          
+          <% if item.order != nil %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+          <% end %>
 
         </div>
         <div class='item-info'>
