--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.item_image.variant(resize:'500x500') ,class:"item-box-img" %>
-
+      <% if @item.order != nil %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+      <% end %>
 
     </div>
     <div class="item-price-box">
@@ -23,18 +24,15 @@
        </span>
      </div>
 
-     <% if user_signed_in? && current_user.id==@item.user_id %>
-
-     <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-     <p class="or-text">or</p>
-     <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-
-     <% elsif user_signed_in? && current_user.id!=@item.user_id %>
-     <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
-     <%# //商品が売れていない場合はこちらを表示しましょう %>
-
-
-     <% end %>
+     <% if user_signed_in? && @item.order == nil %>
+      <% if current_user.id==@item.user_id %>
+          <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+          <p class="or-text">or</p>
+          <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
+      <% else %>
+          <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+      <% end %>
+    <% end %>
 
      <div class="item-explain-box">
        <span><%= @item.item_text %></span>
